src/parser/snapshots/almond__parser__functions__tests__directive.snap
---
source: src/parser/functions.rs
expression: "parse_directive(\"\\\"use strict\\\"\".into()).unwrap().1"
---
{
  "type": "ExpressionStatement",
  "expression": {
    "type": "Literal",
    "value": "use strict",
    "start": 0,
    "end": 12
  },
  "directive": "use strict",
  "start": 0,
  "end": 12
}
