src/parser/snapshots/almond__parser__functions__tests__function_declaration-2.snap
---
source: src/parser/functions.rs
expression: "parse_function_declaration(r#\"function a() {}\"#.into()).unwrap().1"
---
{
  "type": "FunctionDeclaration",
  "id": {
    "type": "Identifier",
    "name": "a",
    "start": 9,
    "end": 10
  },
  "params": [],
  "body": {
    "type": "BlockStatement",
    "body": [],
    "start": 13,
    "end": 15
  },
  "async": false,
  "start": 0,
  "end": 15
}
